--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -54,7 +54,9 @@ form {
     background-color: transparent;
 }
 
-
+.main-section {
+    display: block;
+}
 
 .div-main-content {
     display: flex;
@@ -106,16 +108,16 @@ form {
 }
 
 .div-main-container {
+    width: 100vw;
     display: flex;
     justify-content: center;
-    margin: 4% 0;
-    
+    margin: 4% auto;
 }
 
 .div-container {
-    width: 76%;
     border-radius: 4px;
     border: 4px solid var(--black-main-color);
+    width: 80%;
 }
 
 .nav-second-section {
@@ -163,6 +165,14 @@ form {
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: space-around;
+}
+
+.error-alert {
+    width: 100%;
+    display: none;
+    justify-content: center;
+    margin: 16px 0;
+    color: var(--red-main-color);
 }
 
 .grid-row {
