--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -31,10 +31,6 @@ body {
     cursor: pointer;
 }
 
-form {
-    margin-right: 16px;
-}
-
 .input-search {
     background-color: var(--black-second-color);
     color: var(--white-main-color);
@@ -54,15 +50,11 @@ form {
     background-color: transparent;
 }
 
-.main-section {
-    display: block;
-}
-
 .div-main-content {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 0 0 80px 0;
+    margin: 40px 0;
 }
 
 .btn-add{
@@ -78,61 +70,20 @@ form {
     background-color: transparent;
 }
 
-.div-content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 16px;
-}
-
-.img-trash-solid {
-    width: 16px;
-    height: 16px;
-    padding: 4px;
+.btn-trash {
+    width: 28px;
+    height: 28px;
     border-radius: 4px;
     background-color: var(--red-main-color);
     cursor: pointer;
 }
 
-.img-pencil-solid {
-    width: 16px;
-    height: 16px;
-    padding: 4px;
+.btn-pencil {
+    width: 28px;
+    height: 28px;
     border-radius: 4px;
     background-color: var(--blue-second-color);
     cursor: pointer;
-}
-
-.second-section {
-    display: none;
-}
-
-.div-main-container {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    margin: 4% auto;
-}
-
-.div-container {
-    border-radius: 4px;
-    border: 4px solid var(--black-main-color);
-    width: 80%;
-}
-
-.nav-second-section {
-    background-color: var(--black-main-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.div-title-description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 24px 0 100px 0;
-    gap: 24px;
 }
 
 .input-title-div {
@@ -172,32 +123,10 @@ table {
     text-align: center;
 }
 
-.th-transparent {
-    width: 100%;
-}
-
 .error-alert {
     width: 100%;
     display: none;
     justify-content: center;
     margin: 16px 0;
     color: var(--red-main-color);
-}
-
-.div-btn-save {
-    display: flex;
-    justify-content: end;
-}
-.btn-save{
-    border-radius: 4px;
-    color: var(--white-main-color);
-    background-color: var(--blue-main-color);
-    border: 1px solid var(--blue-main-color);
-    cursor: pointer;
-    transition-duration: 0.4s;
-    margin: 16px;
-}
-
-.btn-save:hover{
-    background: transparent;
 }
